# e621-scrape-noapi

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  environment-test.yaml  environment.yaml  requirements.txt  setup.cfg
.github/workflows/: codeql.yaml  test.yaml
src/e621-noapi-cli/: __init__.py  __main__.py  cli.py  e6datastore.py  e6db.py  e6query.py  e6search.py  filesize.py
tests/: tests.py
