[metadata]
name = e621-noapi-cli
version = 0.0.1
author = Deity Durg
author_email = loopyd@users.noreply.github.com
description = e621 tool for furry diffusioners to easily grab and organize datasets.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/loopyd/e621-noapi-cli
project_urls =
    Bug Tracker = https://github.com/loopyd/e621-noapi-cli/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10.2
install_requires =

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    e621-noapi-cli = e621-noapi-cli.cli:main

[flake8]
max-line-length = 160
extend-ignore = E203
